correction des liens

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <div class="card">
       <h2 id="follow_me">Follow me</h2>
       <ul>
-        <li><a href="https://www.instagram.com/juliendiscrit/" target="blank"><i class="fa-brands fa-twitter"></i></a></li>
+        <li><a href="https://twitter.com/discreetmusic" target="blank"><i class="fa-brands fa-twitter"></i></a></li>
 
-        <li><a href="https://twitter.com/discreetmusic" target="blank"><i class="fa-brands fa-linkedin"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/juliendiscrit/" target="blank"><i class="fa-brands fa-linkedin"></i></a></li>
 
-        <li><a href="https://www.linkedin.com/in/juliendiscrit/" target="blank"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="https://www.instagram.com/juliendiscrit/" target="blank"><i class="fa-brands fa-instagram"></i></a></li>
       </ul>
     </div>
   </div>
